--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7effc5ece290&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f01ef1b1150&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7effc5bffad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7effc5bffcd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f01eee19e90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f01eee13b10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7effc61a6450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7effc61a6650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f01ef42b7d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f01ef3c8410&gt;]</pre>
 </div>
 
 </div>
