--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe1108fb490&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1e003644d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe11027ba90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe11027bc90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1dfffdbb10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1dfffdbd10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe110828410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe110828610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1e00581410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1e00581610&gt;]</pre>
 </div>
 
 </div>
