--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f71e52fef50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1faa39cb90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f71e442ea50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f71e442ec50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1fa9d79ad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1fa9d79cd0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f71e49d3350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f71e49d3550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1faa31d490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1faa31d690&gt;]</pre>
 </div>
 
 </div>
