--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1faa39cb90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff928eba610&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1fa9d79ad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1fa9d79cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff928b2ba50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff928b2bc50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1faa31d490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1faa31d690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff9290cb3d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff9290cb5d0&gt;]</pre>
 </div>
 
 </div>
