--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0aba499b50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4143db9e50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0abaa77b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0abaa77dd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4143afa7d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4143afa950&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0abb023590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0abb0237d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f41440b51d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f41440b5350&gt;]</pre>
 </div>
 
 </div>
