--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fec592a6950&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f84114de390&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fec5899bad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fec58c6ccd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8411134690&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8411143ad0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fec5926cf90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fec59220590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f84116f0190&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f84116fb450&gt;]</pre>
 </div>
 
 </div>
