--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f686464fad0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7feb67b683d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6864010890&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6864010a90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7feb677c2d50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7feb677c2e10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f68645c3210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f68645c3410&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7feb67d78490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7feb67d78690&gt;]</pre>
 </div>
 
 </div>
