--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc47a643890&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7feadde4dad0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc47a2c1ad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc47a2c1cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7feade408b10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7feade408d10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc47a8683d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc47a8685d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7feade9bd450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7feade9bd650&gt;]</pre>
 </div>
 
 </div>
