--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9a2424df50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1e5db97a50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9a24583a50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9a24583c50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1e5e161b10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1e5e161d10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9a24b37390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9a24b37590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1e5e715490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1e5e715690&gt;]</pre>
 </div>
 
 </div>
