--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f63dc1fed10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2d754d4990&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f63dbf42a90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f63dbf42cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2d751bebd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2d751bedd0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f63dc4e9450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f63dc4e9690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2d757ab610&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2d75765690&gt;]</pre>
 </div>
 
 </div>
