--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6470795190&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd9e6354710&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f647040c9d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f647040cbd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd9e5d12a50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd9e5d12c50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f64709c1410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f64709c1610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd9e62c6390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd9e62c6590&gt;]</pre>
 </div>
 
 </div>
