--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd9e6354710&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe9613dd0d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd9e5d12a50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd9e5d12c50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe9610bab10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe9610bad10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd9e62c6390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd9e62c6590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe96166f3d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe96166f5d0&gt;]</pre>
 </div>
 
 </div>
