--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5b62bf4ed0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7eff6930db90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5b62841b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5b62841d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7eff68c8e610&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7eff68f7dad0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5b62df5490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5b62df5690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7eff69534250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7eff69579410&gt;]</pre>
 </div>
 
 </div>
