--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9355dc0390&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f71abfe8e90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9356390b10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9356390d10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f71abc66b10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f71abc66d10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f935693c450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f935693c650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f71ac20d490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f71ac20d690&gt;]</pre>
 </div>
 
 </div>
