--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f771b8d5a50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd3f522aa90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f771b2a7cd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f771b2a7ed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd3f4ee6b50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd3f4ee6d50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f771b84c610&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f771b84c810&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd3f5499550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd3f5499750&gt;]</pre>
 </div>
 
 </div>
