--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe614dbe6d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3a19e80450&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe614a74a10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe614a74c10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3a19ae0a90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3a19ae0c90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe61502c2d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe61502c4d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3a1a091390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3a1a091590&gt;]</pre>
 </div>
 
 </div>
