--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8b20df5650&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f74326accd0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8b1aeb8990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8b1aeb8b90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f74323ecb90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f74323ecd90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8b1b4b9310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8b1b472490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7432993490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7432993690&gt;]</pre>
 </div>
 
 </div>
