--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f74326accd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5f09ae4310&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f74323ecb90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f74323ecd90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5f094b7bd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5f094b7dd0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7432993490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7432993690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5f09a5f4d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5f09a5f6d0&gt;]</pre>
 </div>
 
 </div>
