--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6d5911ee50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f305a9a9110&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6d58af3ad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6d58af3cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f305a37dbd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f305a37ddd0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6d5909b3d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6d5909b5d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f305a925450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f305a925650&gt;]</pre>
 </div>
 
 </div>
