--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff63fbe5510&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc26830ad50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff6401b19d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff6401b1bd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc26861a950&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc2688e4b90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff6407612d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff6407614d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc268eecb50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc268e99590&gt;]</pre>
 </div>
 
 </div>
